--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -1,6 +1,6 @@
 .menuLink {
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 
 .css-e53awj-MuiStack-root {
@@ -15,8 +15,6 @@
     padding-right: 20px;
     padding-left: 20px;
     justify-content: space-between;
-    margin-top: 15px;
-
 }
 .css-h4y409-MuiList-root {
     margin: 0 auto !important;
