started to add admin panel

--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -16,6 +16,6 @@
     padding-left: 20px;
     justify-content: space-between;
 }
-.css-h4y409-MuiList-root {
+.menu .css-h4y409-MuiList-root {
     margin: 0 auto !important;
 }
