--- a/frontend/src/pages/AdminPanel/admin.css
+++ b/frontend/src/pages/AdminPanel/admin.css
@@ -39,3 +39,13 @@
     flex-direction: column;
     align-items: center;
 }
+.brandsMain {
+    position: relative;
+    max-width: 350px;
+    width: 100%;
+}
+
+.addButton {
+    position: absolute !important;
+    right: 0px;
+}
