--- a/frontend/src/components/Order/order.css
+++ b/frontend/src/components/Order/order.css
@@ -1,6 +1,6 @@
 .orderDetails {
     display: flex !important;
-    align-items: start;
+    align-items: flex-start;
 }
 
 .DeliveryTitle .css-10hburv-MuiTypography-root {
@@ -26,8 +26,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 .Order  {
     max-width: fit-content;
     margin: 0 auto;
+}
+.css-18y2uza-MuiTypography-root-MuiTimelineContent-root {
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+}
+.css-18y2uza-MuiTypography-root-MuiTimelineContent-root svg  {
+    cursor: pointer;
 }
