--- a/frontend/src/pages/AdminPanel/components/panelItems/Order/order.css
+++ b/frontend/src/pages/AdminPanel/components/panelItems/Order/order.css
@@ -2,6 +2,7 @@
     margin: 0 auto !important;
     display: flex !important;
     margin-bottom: 25px !important;
+    margin-top: 25px !important;
 }
 .deliveryInfoInput {
     margin-bottom: 20px !important;
