--- a/frontend/src/pages/AdminPanel/components/panelItems/Products/products.css
+++ b/frontend/src/pages/AdminPanel/components/panelItems/Products/products.css
@@ -1,48 +1,72 @@
 .inputProductImage:hover {
-        transition: 0.5s;
-        filter: brightness(60%)
+    transition: 0.5s;
+    filter: brightness(60%)
 }
-.newProductMain{
-        display: flex;
-        align-items: center;
+
+.newProductMain {
+    display: flex;
+    align-items: center;
 }
+
 .newProductInput {
-        margin-bottom: 25px!important;
+    margin-bottom: 25px !important;
 }
-.newProductInputs{
-        display: flex;
-        flex-direction: column;
+
+.newProductInputs {
+    display: flex;
+    flex-direction: column;
 }
+
 .uploadImageContainer {
-        max-width: 250px;
-        width: 250px;
-        height: 250px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 20px;
+    max-width: 250px;
+    width: 250px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
 }
+
 .uploadImgProductBtn {
-        font-size: 50px!important;
-        border: none!important;
+    font-size: 50px !important;
+    border: none !important;
 }
+
 .uploadImgProductBtn:hover {
-       background: none!important;
+    background: none !important;
 }
+
 .css-1gb9piy-MuiIcon-root {
-        align-items: center !important;
-        display: flex!important;
-        justify-content: center;
+    align-items: center !important;
+    display: flex !important;
+    justify-content: center;
 }
+
 .chips {
-        margin-top: 25px;
-        margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 50px;
 }
-.selectProductInfoTitle{
-        margin: 25px auto 25px auto;
-        font-size: 25px;
+
+.selectProductInfoTitle {
+    margin: 25px auto 25px auto;
+    font-size: 25px;
 }
+
 .selectProductInfo {
-        display: flex;
-        flex-direction: column;
+    display: flex;
+    flex-direction: column;
+}
+
+.filter {
+    display: flex;
+    max-width: 350px;
+    justify-content: space-between;
+    width: 100%;
+}
+.productsFilter span {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+    justify-content: space-between;
 }
