--- a/frontend/src/pages/AdminPanel/admin.css
+++ b/frontend/src/pages/AdminPanel/admin.css
@@ -43,9 +43,11 @@
     flex-direction: column;
     align-items: center;
 }
-.brandsMain {
+.itemsMain {
     position: relative;
+    max-width: 500px;
     width: 100%;
+    margin: 0 auto;
 }
 
 .addButton {
