--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -50,3 +50,10 @@
         width: 170px;
     }
 }
+.ordersButtonMenu {
+    display: block;
+}
+.css-1guk29 {
+    display: flex;
+    align-items: center;
+}
