added home page, fixed bugs.
    --- have to fix product page on not authed

--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -1,8 +1,8 @@
 .menuLink {
     text-decoration: none;
     color: inherit;
+    margin-left: 5px;
 }
-
 .css-e53awj-MuiStack-root {
     align-items: center !important;
 }
