--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,3 +31,11 @@
     background-size: contain !important;
 }
 
+#index{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+.content {
+    flex: 1;
+}
